--- a/style.css
+++ b/style.css
@@ -95,6 +95,19 @@ header{
 }
 
 /* SLIDER */
+.car-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
+.car-title h3, .car-title h4{
+    font-size: 3.5rem;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-align: center;
+}
 .slider__content .item{
     color: white;
     text-align: center;
